--- a/src/ComicBookStore/ComicBookStore.csproj
+++ b/src/ComicBookStore/ComicBookStore.csproj
@@ -107,6 +107,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ComicBooksController.cs" />
     <Compile Include="Controllers\Home.cs" />
+    <Compile Include="Data\ComicBookRepo.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
